{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Player",
            "id": "acabed86-280a-4409-a367-81af93abcb68",
            "actions": [
                {
                    "name": "Propulsion",
                    "type": "Button",
                    "id": "0f5f2932-b4e2-421d-9f14-38fa202f62ba",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LeftRotation",
                    "type": "Button",
                    "id": "95a46e72-35ce-46c0-867b-060ddc35359f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightRotation",
                    "type": "Button",
                    "id": "e0ea4ac2-c985-478a-aeec-beb5f8864632",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Shoot",
                    "type": "Button",
                    "id": "d938ef15-8ffb-4959-8e47-8a2ffa8b4d47",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "HyperSpace",
                    "type": "Button",
                    "id": "f311f7b3-f1c5-4e48-8b1c-2f4c6e471bba",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "15387b1f-f01f-401f-9c18-26e7994846e7",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "LeftRotation",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "38d6af62-a629-4434-b211-585974cf2a61",
                    "path": "<AndroidGamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mobile",
                    "action": "LeftRotation",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fb910d5a-f1c6-45d8-b71d-7fa1dbb8915a",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "RightRotation",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0758b739-1a5b-4ce4-988d-b63b98936eee",
                    "path": "<AndroidGamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mobile",
                    "action": "RightRotation",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c8b12726-3d8a-48ec-a49e-992f761697f6",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Shoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "11bdcf5a-fe2d-472d-90b1-10ccd58b439f",
                    "path": "<AndroidGamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mobile",
                    "action": "Shoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cc63e901-59aa-435f-be32-727fdbc67c37",
                    "path": "<Keyboard>/h",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "HyperSpace",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "35fa7efe-d639-495f-ad72-59008951ab2b",
                    "path": "<AndroidGamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mobile",
                    "action": "HyperSpace",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a3b6067a-06f7-444c-8dba-397ba9d0eede",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Propulsion",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "457097c9-e5bc-4f32-be97-276570b9cfd9",
                    "path": "<AndroidGamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mobile",
                    "action": "Propulsion",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard",
            "bindingGroup": "Keyboard",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": true,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Mobile",
            "bindingGroup": "Mobile",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}